--- a/styling.css
+++ b/styling.css
@@ -2,8 +2,8 @@ body{font-family:sans-serif;
      font-size:1em; 
 }
 
-@font-face{font-family:Champagne and Limousines;
-	src: url();
+/*@font-face{font-family:Champagne and Limousines;
+	src: url();*/
 
 }
 /*{outline:1px solid red;}*/
