--- a/styling.css
+++ b/styling.css
@@ -8,12 +8,13 @@ body{font-family:sans-serif;
 }
 /*{outline:1px solid red;}*/
  #container{
- 	margin:auto;
+ 	margin:0 auto;
  	width:700px;
  	height:1050px;
  }
 /*Top Header starts here*/
 header{background:#7DADC6;
+	width:700px;
 	height:200px;
 	margin-top:-50px;
 	border-bottom: 10px groove #000;
